...
                        );
                    },
                ),
            ),
            // Button to add a new user / Botón para agregar un nuevo usuario
            floatingActionButton: FloatingActionButton(
                key: const Key('fab_add_user'),
                tooltip: 'Add User / Agregar Usuario',
                backgroundColor: Colors.white.withOpacity(0.9),
                foregroundColor: Colors.black87,
                child: const Icon(Icons.add),
                onPressed: () {
                    Navigator.push(
...
